--- a/src/index.css
+++ b/src/index.css
@@ -144,6 +144,7 @@ a.ac-anchor:visited:active {
 
 .ac-image {
     height: 200px;
+    object-fit: cover;
 }
 
 .ac-input.ac-textInput.ac-multiline {
